# keystone

./: Cargo.toml  caplog.trie  keystone.sqlite
core/src/: sqlite.rs
examples/: diligence-example.linux.toml
examples/diligence-test1/: Cargo.toml  build.rs  diligence_hello_world.capnp  diligence_working.capnp  main.rs  main_hello_world.rs  main_old.rs  main_working.rs
examples/diligence-test1/commands/: count_hours.rs  log_task.rs  mod.rs
examples/diligence-test1/tests/: init.rs
examples/hello-world/: main.rs
